--- a/readme.textile
+++ b/readme.textile
@@ -1,3 +1,10 @@
+//------------------------------------------------------------------------------
+This code is a copy of an old website disappeared Sept. 19, 2013
+https://github.com/EliteEng/grbl who recently reappeared in but with a copy of Grbl 8c
+which only manage three axes. These two versions are different.
+I just corrected the errors array dimensions.
+LETARTARE
+//------------------------------------------------------------------------------
 Grbl - An embedded g-code interpreter and motion-controller for the Arduino Mega2560 microcontroller
 
 This Fork is an updated grbl v0.81 for the Arduino Mega2560.
