--- a/0.841/readme.textile
+++ b/0.841/readme.textile
@@ -1,41 +1,25 @@
 //------------------------------------------------------------------------------
-This version 0.83 is an adaptation of "Mega2560-grbl-0.81" work with Arduino-xxx
+These versions 0.8xx are adaptation of "Mega2560-grbl-0.81" work with Arduino-xxx
 
 
-LETARTARE   17-04-2014 (french date)
-//------------------------------------------------------------------------------
-0.83_0 :
+v0.841
+    - M3, M4, M5 and M7, M8, M9 functioning properly active low (configurable in “config.h”)
 
-Functions Gcode-modified
-M3, M4, M5 and M7, M8, M9 functioning properly active low (configurable in "config.h")
+v0.83
+    - add choice of active level 0 or 1 for Spindle, Coolant and Mist.
 
-Modified files:
-- config.h              : active low (or high) for pins 6, 36, 35, 37
-- spindle_control.cpp   : M3, M4, M5
-- coolant_control.cpp   : M7, M8, M9
-- readme.textile        : this file
-//------------------------------------------------------------------------------
-17-04-2014
-0.83_1 : by infobarquée and icare -> french forum "http://forum.arduino.cc"
+v0.82
+    - is an adaptation of “Mega2560-grbl-0.81” work with Arduino-xxx.
+    - correcting wrong sized tables in limits.c, main.c, nuts_bolts_h, settings.c
+    - on a proposal from DavidLQuick modifcation of protocol.c
 
-The appointed axis C (about Z) is modified in A (around X)
+v0.81
+    - is a copy of an old website disappeared Sept. 19, 2013
+        https://github.com/EliteEng/grbl
+       who recently reappeared in but with a copy of official Grbl-0.8c .
 
-Modified files:
-- gcode.cpp
-- limits.cpp
-- main.cpp
-- nuts_bolts.h     N_AXIS
-- nuts_bolts.cpp
-- planner.cpp
-- protocol.cpp
-- settings.cpp
-- stepper.cpp
-//--------------------------------------------------------------------------------
-20-04-2014
-0.841
 
-add
-- pin_map.h
+
 
 
 
