--- a/CodeBlocks/Readme
+++ b/CodeBlocks/Readme
@@ -14,56 +14,56 @@ April 28, 2013 (for Win32)
 2- Prerequisites Win32
 //------------------------------------------------------------------------------
 
-	1- install 'WinAVR-20100110' on your computer from
+    1- install 'WinAVR-20100110' on your computer from
 			'http://sourceforge.net/projects/winavr'
 
     2- get a 5.11 version of 'avrdude'
 
-		'http://download.savannah.gnu.org/releases/avrdude/avrdude-5.11-Patch7610-win32.zip'
+	'http://download.savannah.gnu.org/releases/avrdude/avrdude-5.11-Patch7610-win32.zip'
 
-		just change only two files:
+	just change only two files:
 
-		- 'bin\avrdude.exe' and 'bin\avrdude.conf'
+	- 'bin\avrdude.exe' and 'bin\avrdude.conf'
 
-		-  the menu 'Code::Blocks->Tools' installation 'avrdude' allows upload code obtained at its option:
+	-  the menu 'Code::Blocks->Tools' installation 'avrdude' allows upload code obtained at its option:
 
-		 -------------------------------------------------------------------
-		 Name 				: Upload
-		 Executable 		: avrdude
-		 Parameter 			: -C "$(TARGET_COMPILER_DIR)\bin\avrdude.conf" -V -v
-			-p${MCU} -c$(PROGRAMMER_ID) -P\\.\${UPLOAD_PORT} -b${UPLOAD_BAUDRATE}
-			-D -Uflash:w:$(PROJECT_DIR)/${TARGET_OUTPUT_DIR}${TARGET_OUTPUT_BASENAME}.elf.hex:i
-		 Working directory : $(TARGET_COMPILER_DIR)\bin
-		 -------------------------------------------------------------------
+	-------------------------------------------------------------------
+	Name 		: Upload
+	Executable 	: avrdude
+	Parameter  	: -C "$(TARGET_COMPILER_DIR)\bin\avrdude.conf" -V -v
+		-p${MCU} -c$(PROGRAMMER_ID) -P\\.\${UPLOAD_PORT} -b${UPLOAD_BAUDRATE}
+		-D -Uflash:w:$(PROJECT_DIR)/${TARGET_OUTPUT_DIR}${TARGET_OUTPUT_BASENAME}.elf.hex:i
+	Working directory : $(TARGET_COMPILER_DIR)\bin
+	-------------------------------------------------------------------
 
-    3- in 'Code::Blocks' you must create two global variables that identify
-		the ways these tools
+    3- in 'Code::Blocks' you must create two global variables that identify the ways these tools
 
-		- '$(#avr)' 	= path WINAVR
+	- '$(#avr)' 	= path WINAVR
 
-		- '$(#cbexe)'   = path 'codeblocks.exe'
+	- '$(#cbexe)'   = path 'codeblocks.exe'
 
-		--> if you forgot to do 'Code::Blocks' will ask do launch assistants
+	--> if you forgot to do 'Code::Blocks' will ask do launch assistants
 
-		- you must also define the different programs for
-		  'Compileur GNU AVR GCC' with the base path '$(#avr)'
+	- you must also define the different programs for
+		'Compileur GNU AVR GCC' with the base path '$(#avr)'
 
-    3- possibly if you wish to use a serial terminal 'RealTerm' from
+    4- possibly if you wish to use a serial terminal 'RealTerm' from
         'http://sourceforge.net/projects/realterm/files/'
 
-		- a good place to install this device might be :
-			'$(cbexe)\tools\realterm'
-		  Unfortunately, the sources are no longer available.
+	- a good place to install this device might be :
+		'$(cbexe)\tools\realterm'
+		
+		Unfortunately, the sources are no longer available.
           
-		- you need to install the command in the 'Tools' menu or 'Tools+'
+	- you need to install the command in the 'Tools' menu or 'Tools+'
 
 //------------------------------------------------------------------------------
 4 - Fast Start in 'Code::Blocks-12.11' :
 //------------------------------------------------------------------------------
 
-	1- restart 'Code::Blocks'
+    1- restart 'Code::Blocks'
 
-	2- example : load project 'Grbl81-c.cbp'  for MEGA2560 4 axes
+    2- example : load project 'Grbl81-c.cbp'  for MEGA2560 4 axes
         - in "Project->Build options", target == grbl81,  you must change
 
           UPLOAD_PORT = COM?? for Upload
