--- a/CodeBlocks/Grbl-8c2Mega-c/readme.textile
+++ b/CodeBlocks/Grbl-8c2Mega-c/readme.textile
@@ -1,10 +1,16 @@
-﻿///------------------------------------------------------------------------------
+///------------------------------------------------------------------------------
 These versions 0.8cxx are adaptations 4 axes of "Mega2560-grbl-0.8c" for 3 axes
 ///-----------------------------------------------------------------------------
 
 ==> This code is an EXPERIMENTAL code for 4 axes  with Mega2560 <==
 
-v0.8c2   June 06, 2014
+v0.8c1	August 19, 2014   : bug fixed for using V, W, B, C
+
+	- Choice the type of fourth axis in the "config.h" file :
+		- linear 	: U or V or W
+		- rotary 	: A or B or C
+	- Choice the fourth axis in the "defaults.h" file :
+		- AXIS_T = AXIS_U or V or W or A or B or C
 
 	- Creating a new pinout, different '0.8c1', which is derived from '0.8c Mega2560'
 		- #define PIN_MAP_ARDUINO_MEGA_2560_4   /// mapping 0.8c Mega2560 + T axis
@@ -44,7 +50,40 @@ v0.8c2   June 06, 2014
 	- Possibility  always upload defaults parameters with a macro in 'config.h'
 		- '#define ALWAYS_DEFAULTS_SETTINGS  1   /// 0 normal'
 
-	- The modified files lines are marked '/// 8c2'*
+	- The modified files lines are marked '/// 8c2'
+
+//------------------------------------------------------------------------------
+
+v0.8c1	August 19, 2014   : bug fixed for use V, W, B, C
+
+	- Choice the type of fourth axis in the "config.h" file :
+		- linear 	: U or V or W
+		- rotary 	: A or B or C
+	- Choice the fourth axis in the "defaults.h" file :
+		- AXIS_T = AXIS_U or V or W or A or B or C
+
+	- Pinout in 'pin_map.h' for 'MEGA2560'
+		- X_STEP_BIT  		Pin 22
+		- Y_STEP_BIT  		Pin 24
+		- Z_STEP_BIT  		Pin 26
+		- T_STEP_BIT   		Pin 28
+
+		- X_DIRECTION_BIT	Pin 23
+		- Y_DIRECTION_BIT   Pin 25
+		- Z_DIRECTION_BIT	Pin 27
+		- T_DIRECTION_BIT  	Pin 29
+
+	- The text provided at initialization, where T in [A, B, C, U, V, W]
+		----------------------------
+		MEGA2560with 4 axes (X, Y, C, T)
+		Grbl 0.8c1
+		"$" to dump current settings
+		----------------------------
+
+	- Files are changed from '0.8c', changed lines are marked '/// 8c1'
+		- config_h, defaults.h, pin_map.h
+		- gcode.*, limits.c, motion_control.*, nuts_bolts.*, planner.*,
+		  protocol.h, report.*, stepper.c
 
 	- The tests were performed using "GrblController-3.6.1-T1" after connection,
 	  paired with the fourth axis Grbl
